# shopifake-recommender

./: .env.example.dev  .env.example.prod  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_integration_tests.sh
chart/: Chart.yaml  deploy-local.ps1  deploy-local.sh  qdrant-deployment.yaml  redis-deployment.yaml  values.example.yaml  values.yaml
chart/templates/: deployment-queue.yaml  deployment-services.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
src/: application.py  config.py  main.py  test.py
src/api/: __init__.py
src/api/routes/: __init__.py  chat.py  debug.py  embeddings.py  faq.py  products.py  rag.py  system.py
src/data/: faq_content.txt
src/models/: chat.py  embedding.py  faq.py  product.py  rag.py
src/services/: embedding_worker.py  product_registry.py
src/services/chat/: clarifications.py  history_utils.py  orchestrator.py  rag_pipeline.py  reply_builder.py  result_store.py
src/services/clients/: decoder_client.py  encoder_client.py
src/services/queue/: dlq_manager.py  embedding_queue.py  redis_stream.py
src/services/rag/: result_store.py
src/services/storage/: qdrant_service.py
src/services/workers/: base.py  embedding_worker.py  rag_worker.py
tests/: conftest.py  test_basic.py  test_chat_api.py  test_debug_decoder.py  test_debug_encoder.py  test_embedding_pipeline.py  test_embeddings_api.py  test_faq.py  test_integration.py  test_product_registration.py  test_rag_search.py
