[project]
name = "fastapi-template"
version = "1.0.0"
description = "A minimal FastAPI template"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.2",
    "uvicorn[standard]==0.32.0",
    "gunicorn==23.0.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.8.3",
    "black==24.10.0",
    "openai==1.51.0",
    "redis==5.0.8",
    "qdrant-client==1.11.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/api/routes/faq.py" = ["E501"]
"tests/test_faq.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

